--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "lite-module": "file:///Users/michaelpurdy/dev/angular/lite-module",
+    "lite-module": "../lite-module",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
